2009-08-17  Ian Piumarta  <piumarta@freebsd.piumarta.com>

	* plugins/PseudoTTYPlugin/build.cmake: Add
	unix/plugins/AsynchFilePlugin to include search path.

	* plugins/PseudoTTYPlugin/config.cmake: Check manually for
	/usr/include/libutil.h because FreeBSD cannot #include it alone.

2009-08-16  Ian Piumarta  <com -dot- gmail -at- piumarta (backwards)>

	* vm/config.cmake: Always set OPENGL_* to X11 values; on MacOSX
	set AGL_FOUND, AGL_INCLUDE_DIR and AGL_LIBRARIES to Quartz values.

	* plugins/B3DAcceleratorPlugin/config.cmake: Set USE_X11_GLX, and
	USE_QUARTZ_CGL based on OPENGL_FOUND and AGL_FOUND.

	* vm-display-Quartz/build.cmake: Link against -framework Cocoa.

	* vm-display-X11/build.cmake: Link against X11_LIBS and
	OPENGL_LIBS.

2009-08-16    <piumarta@solaris.piumarta.com>

	* plugins/SocketPlugin/config.cmake: Check for -lsocket and -lnsl.

2009-08-16  Ian Piumarta  <com -dot- gmail -at- piumarta (backwards)>

	* vm/config.cmake: Check for -liconv on Solaris.

	* plugins/SocketPlugin/config.cmake: Check for -lsocket on
	Solaris.

	* CMakeLists.txt: CMake variables can be set via 'configure'.

	* vm/sqUnixExternalPrims.c (tryLoading): ignore directories
	silently but always report the error when dlopen cannot open an
	existing file.

	* vm/sqUnixEvent.c (recordKeyboardEvent): ensure keycode is
	non-negative.

	* vm/sqUnixCharConv.c (setNEncoding): Add setNEncoding function
	on MacOSX to allow XImmPlugin to load without errors.

	* vm/sqUnixMain.c (moduleDescriptions): reorder driver table
	entries to restore correct default sound driver.

	* doc/squeak.1: Update documentation URLs.

	* plugins/B3DAcceleratorPlugin/sqUnixOpenGL.h (GL_RENDERER_DEFINED):
	Define GL_RENDERER_DEFINED at point of structure definition.

	* plugins/SqueakFFIPrims/any-libffi.c: Include ffi.h or ffi/ffi.h
	according to HAVE_FFI[_FFI]_H.

	* config/config.h.in: Configure HAVE_FFI_H and HAVE_FFI_FFI_H.

	* vm-sound-MacOSX/sqUnixSoundMacOSX.c (Stream_setFormat): Don't