@@ -1,0 +1,1 @@
+TARGET_LINK_LIBRARIES (@plugin@ ${@plugin@_libs})
