@@ -1,4 +1,9 @@
-#include <uuid/uuid.h>
+#include "config.h"
+#if defined(HAVE_UUID_H)
+# include <uuid.h>
+#elif defined(HAVE_UUID_UUID_H)
+# include <uuid/uuid.h>
+#endif
 #include "sq.h"
 
 int sqUUIDInit(void)
